--- a/QiuBai/res/layout/weather_main.xml
+++ b/QiuBai/res/layout/weather_main.xml
@@ -12,25 +12,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
+        
+        <TextView 
+            android:id="@+id/weather_publish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="5dp"
+            android:textSize="13sp"
+            android:textColor="@android:color/white"/>
 
         <ImageView
             android:id="@+id/img_weather"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/day00" />
+            android:layout_marginTop="20dp" />
 
         <TextView
             android:id="@+id/text_weather_degree"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:text="17°/7°"
+            android:layout_marginTop="15dp"
             android:textColor="@android:color/white"
-            android:textSize="30sp" />
+            android:textSize="40sp" />
 
         <LinearLayout
             android:id="@+id/lin_weather_detail"
@@ -38,24 +44,27 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="今天"
-                android:textColor="@android:color/white"
-                android:textSize="15sp" />
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/weather_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="04/20 星期一 阴 3-4级"
                 android:textColor="@android:color/white"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/weather_index"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lineSpacingMultiplier="1.5"
+                android:paddingLeft="10dp"
+                android:paddingRight="2dp"
+                android:paddingTop="10dp"
+                android:textColor="@android:color/white"
+                android:textSize="13sp" />
+            
         </LinearLayout>
     </LinearLayout>
 
