modify main activity

--- a/QiuBai/res/layout/main_drawer_left.xml
+++ b/QiuBai/res/layout/main_drawer_left.xml
@@ -89,4 +89,19 @@
         </LinearLayout>
     </RelativeLayout>
 
+    
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="糗百 - 您的快乐伙伴"
+            android:textColor="@color/common_grey_color"
+            android:textSize="14sp" />
+    </RelativeLayout>
+    
 </RelativeLayout>
