--- a/QiuBai/res/layout/cd_action_bar.xml
+++ b/QiuBai/res/layout/cd_action_bar.xml
@@ -37,6 +37,38 @@
     </LinearLayout>
     
     <LinearLayout
+        android:id="@+id/cd_action_collect"
+        android:layout_width="160dp"
+        android:layout_height="45dp"
+        android:background="@drawable/common_action_press_bg"
+        android:orientation="horizontal" >
+
+        <RelativeLayout
+            android:layout_width="60dp"
+            android:layout_height="45dp" >
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="15dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/common_action_bar_un_collect" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="100dp"
+            android:layout_height="45dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="收藏"
+                android:textColor="@color/cd_action_text_color"
+                android:textSize="15sp" />
+        </RelativeLayout>
+    </LinearLayout>
+    
+    <LinearLayout
         android:id="@+id/cd_action_comment"
         android:layout_width="160dp"
         android:layout_height="45dp"
