--- a/QiuBai/res/layout/main_drawer_right.xml
+++ b/QiuBai/res/layout/main_drawer_right.xml
@@ -43,9 +43,11 @@
             android:orientation="horizontal" >
 
             <LinearLayout
+                android:id="@+id/main_drawer_right_lin_collect"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@drawable/common_layout_press_bg"
                 android:orientation="vertical" >
 
                 <RelativeLayout
@@ -53,13 +55,11 @@
                     android:layout_height="0dp"
                     android:layout_weight="1" >
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_centerInParent="true"
-                        android:text="10"
-                        android:textColor="@color/common_white_color"
-                        android:textSize="16sp" />
+                        android:src="@drawable/main_drawer_right_fav" />
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -79,9 +79,11 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/main_drawer_right_lin_comment"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@drawable/common_layout_press_bg"
                 android:orientation="vertical" >
 
                 <RelativeLayout
@@ -89,13 +91,11 @@
                     android:layout_height="0dp"
                     android:layout_weight="1" >
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_centerInParent="true"
-                        android:text="10"
-                        android:textColor="@color/common_white_color"
-                        android:textSize="16sp" />
+                        android:src="@drawable/main_drawer_right_tie" />
                 </RelativeLayout>
 
                 <RelativeLayout
