--- a/QiuBai/res/layout/weather_main.xml
+++ b/QiuBai/res/layout/weather_main.xml
@@ -47,7 +47,13 @@
             android:layout_marginTop="3dp"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
-
+        
+   <!--         <ProgressBar android:id="@+id/progress_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyleHorizontal"
+            />
+-->
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
