--- a/QiuBai/res/layout/fragment_picture_detail.xml
+++ b/QiuBai/res/layout/fragment_picture_detail.xml
@@ -20,46 +20,48 @@
         <ImageView
             android:id="@+id/fragment_picture_detail_img"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:scaleType="fitXY"
-             />
+            android:layout_height="250dp"
+            android:scaleType="fitXY" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/fragment_picture_detail_textTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="2dp"
                 android:layout_marginTop="10dp"
+                android:layout_weight="8"
                 android:text="北影复试18岁考生脱上衣任拍"
                 android:textColor="@color/fragment_picture_black"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/fragment_picture_detail_commentText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/fragment_picture_detail_textTitle"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="5dp"
-                android:text="跟帖"
-                android:textColor="@color/activity_main_gray"
                 android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/fragment_picture_detail_comment"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/fragment_picture_detail_textTitle"
-                android:layout_toLeftOf="@id/fragment_picture_detail_commentText"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:gravity="right"
                 android:text="23"
                 android:textColor="@color/activity_main_gray"
-                android:textSize="15sp" />
-        </RelativeLayout>
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/fragment_picture_detail_commentText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:text="跟帖"
+                android:textColor="@color/activity_main_gray"
+                android:textSize="12sp" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
