--- a/QiuBai/res/layout/share_dialog.xml
+++ b/QiuBai/res/layout/share_dialog.xml
@@ -23,8 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="20dp"
-        android:paddingBottom="30dp" >
+        android:paddingBottom="30dp"
+        android:paddingTop="20dp" >
 
         <LinearLayout
             android:id="@+id/share_sns_qqfriends"
@@ -48,6 +48,7 @@
                 android:textColor="@color/share_dialog_text"
                 android:textSize="15sp" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/share_sns_qzone"
             android:layout_width="0dp"
@@ -70,6 +71,7 @@
                 android:textColor="@color/share_dialog_text"
                 android:textSize="15sp" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/share_sns_sina"
             android:layout_width="0dp"
@@ -92,6 +94,7 @@
                 android:textColor="@color/share_dialog_text"
                 android:textSize="15sp" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/share_sns_weixin"
             android:layout_width="0dp"
@@ -114,8 +117,60 @@
                 android:textColor="@color/share_dialog_text"
                 android:textSize="15sp" />
         </LinearLayout>
+    </LinearLayout>
 
-        
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="20dp" >
+
+        <LinearLayout
+            android:id="@+id/share_weixin_zone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/main_rel_bg"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:src="@drawable/friendszone" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:text="微信朋友圈"
+                android:textColor="@color/share_dialog_text"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/main_rel_bg"
+            android:orientation="vertical" >
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/main_rel_bg"
+            android:orientation="vertical" >
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/main_rel_bg"
+            android:orientation="vertical" >
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
